examples/test/testpolicy7490.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7490
  namespace: namespace288
spec:
  podSelector:
    matchLabels:
      key34: value47
      key9: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value4
      podSelector:
        matchLabels:
          key26: value17
          key48: value18
